Show list of products and filter

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-.slick-prev::after{
+.hero-banner .slick-prev::after{
     color: gray !important;
 }
 
-.slick-next::after{
+.hero-banner .slick-next::after{
     color: gray !important;
 }
